PR: Sonarqube improvements (#349)
* fix: low-priority issues on sonarqube

* fix: more sonarqube issues fixed